[tool.poetry]
name = "pycistem"
version = "0.1.0"
description = ""
authors = ["Johannes Elferich <jojotux123@hotmail.com>"]
# build = "build.py"

[tool.poetry.dependencies]
python = "^3.6"


[tool.poetry.dev-dependencies]
pytest = "^5.2"


[build-system]
requires = ["poetry-core>=1.0.0","wheel", "setuptools-cpp", "pybind11"]
build-backend = "poetry.core.masonry.api"
